updated homepage name.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "personal-website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://vknanavati.github.io/Personal-Website",
+  "homepage": "https://vknanavati.github.io/Personal-Website/",
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
